packages/typ/tests/fixtures/diagnostics/0498_modules_alias_hidden_annotation_mismatch_07.ml.expected
File "0498_modules_alias_hidden_annotation_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0498_modules_alias_hidden_annotation_mismatch_07 is not a valid module name.

File "0498_modules_alias_hidden_annotation_mismatch_07.ml", line 14, characters 14-25:
14 | let _ : int = Alias_eta.x
                   ^^^^^^^^^^^
Error: The value Alias_eta.x has type Alias_eta.t = Hidden_eta.t
       but an expression was expected of type int
